<?xml version="1.0"?>
<package format="2">
  <name>rt_usb_9axisimu_driver</name>
  <version>1.0.1</version>
  <description>The rt_usb_9axisimu_driver package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <author email="shop@rt-net.jp">RT Corporation</author>

  <license>BSD</license>

  <url type="website">https://github.com/rt-net/rt_usb_9axisimu_driver/wiki</url>
  <url type="bugtracker">https://github.com/rt-net/rt_usb_9axisimu_driver/issues</url>
  <url type="repository">https://github.com/rt-net/rt_usb_9axisimu_driver</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roslint</depend>

  <export>
  </export>
</package>
