<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rt_usb_9axisimu_driver</name>
  <version>2.0.2</version>
  <description>The rt_usb_9axisimu_driver package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <author email="shop@rt-net.jp">RT Corporation</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/rt-net/rt_usb_9axisimu_driver/issues</url>
  <url type="repository">https://github.com/rt-net/rt_usb_9axisimu_driver</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- <test_depend>ament_lint_auto</test_depend> -->
  <!-- <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

